<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carona</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnCallService">Call RESTFul Service</string>
    <string name="title_activity_sobre">About</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="title_activity_oferecer">Oferecer Carona</string>
    <string name="selectEstado">Escolha um Estado</string>
    <string name="labelDe">De</string>
    <string name="labelPara">Para</string>
    <string name="labelUF">UF</string>
    <string name="labelCity">Cidade</string>
    <string name="loginLabel">Login</string>
    <string name="userLabel">User</string>
    <string name="passwordLabel">Pass</string>
    <string-array name="estados_array">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PR</item>
        <item>PB</item>
        <item>PA</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>	
    </string-array>
    <string name="app_id">596155773813500</string>
	<string name="where">Quando</string>
	<string name="description">Descrição</string>
	<string name="contact">Contato</string>
	<string name="post">POST</string>
	<string name="seach">Seach</string>
	<string name="about">App para Carona</string>
	<string name="developed_by">Desenvolvido por:</string>
	<string name="mateus_medice">Mateus Medice</string>
	<string name="bruno_fransoni">Bruno Fransoni</string>
	<string name="leonardo_generoso">Leonardo Generoso</string>
	<string name="lucas_nicoletto">Lucas Nicoletto</string>
	<string name="thanks">Muito Obrigado! ;)</string>
	
</resources>
