<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="clip_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OferecerActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelUF" />

        <Spinner
            android:id="@+id/spinnerUfFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/estados_array"
            android:prompt="@string/selectEstado" />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelCity" />
        
        <Spinner
            android:id="@+id/spinerCityFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/estados_array"
            android:prompt="@string/selectEstado" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelUF" />

        <Spinner
            android:id="@+id/spinnerUfTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/estados_array"
            android:prompt="@string/selectEstado" />
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelCity" />
        
        <Spinner
            android:id="@+id/spinerCityTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/estados_array"
            android:prompt="@string/selectEstado" />
    </LinearLayout>
    
</RelativeLayout>